--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -173,7 +173,7 @@
                         </div>
                         <div class="flex justify-between items-center border-b pb-[10px]">
                             <div>Domingo</div>
-                            <!-- <div class="text-accent-default font-medium">Solo emergencia</div> -->
+                            <div class="text-accent-default font-medium">Solo emergencia</div>
                         </div>
                     </div>
 
