--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -150,7 +150,7 @@
                     <ul class="flex-1 flex flex-col gap-y-5">
                         <li><a href="" class="hover:text-accent-default transition-all">Aviso legal</a></li>
                         <li><a href="" class="hover:text-accent-default transition-all">Poltitica de privacidad</a></li>
-                        <li><a href="" class="hover:text-accent-default transition-all">Preguntas Frecuentes</a></li>
+                        <li><a href="/home/faq" class="hover:text-accent-default transition-all">Preguntas Frecuentes</a></li>
                         <li><a href="" class="hover:text-accent-default transition-all">Politica de cookies</a></li>
                     </ul>
                 </div>
