--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -105,7 +105,7 @@
     <div class="container mx-auto pb-12 sm:pb-[100px] ">
         <div class="flex flex-col sm:flex-row gap-x-5 gap-y-10">
             <div class="flex-1 w-[80%] mx-auto">
-                <a href=""> <img src="assets/header/logoHeader.svg" alt=""></a>
+                <a href="/home/inicio"> <img src="assets/header/logoHeader.svg" alt=""></a>
                 <p class="mt-[20px]">Ofrecemos una amplia gama de servicios médicos diseñados para atender tus
                     necesidades.</p>
                 <div class="flex items-center gap-x-[6px] mt-[20px]">
@@ -141,17 +141,17 @@
 
                 <div class="flex gap-5 mt-[20px] ">
                     <ul class="flex-1 flex flex-col gap-y-5">
-                        <li><a href="" class="hover:text-accent-default transition-all">Inicio</a></li>
-                        <li><a href="" class="hover:text-accent-default transition-all">Blog</a></li>
-                        <li><a href="" class="hover:text-accent-default transition-all">Nuestro Equipo</a></li>
-                        <li><a href="" class="hover:text-accent-default transition-all">Especialidades</a></li>
-                        <li><a href="" class="hover:text-accent-default transition-all">Contacto</a></li>
+                        <li><a href="/home/inicio" class="hover:text-accent-default transition-all">Inicio</a></li>
+                        <li><a href="/home/blog" class="hover:text-accent-default transition-all">Blog</a></li>
+                        <li><a href="/home/lista_medicos" class="hover:text-accent-default transition-all">Nuestro Equipo</a></li>
+                        <li><a href="/home/especialidad" class="hover:text-accent-default transition-all">Especialidades</a></li>
+                        <li><a href="/home/citas_usuario" class="hover:text-accent-default transition-all">Mis Citas</a></li>
                     </ul>
                     <ul class="flex-1 flex flex-col gap-y-5">
-                        <li><a href="" class="hover:text-accent-default transition-all">Aviso legal</a></li>
-                        <li><a href="" class="hover:text-accent-default transition-all">Poltitica de privacidad</a></li>
+                        <li><a href="/home/inicio" class="hover:text-accent-default transition-all">Aviso legal</a></li>
+                        <li><a href="/home/inicio" class="hover:text-accent-default transition-all">Poltitica de privacidad</a></li>
                         <li><a href="/home/faq" class="hover:text-accent-default transition-all">Preguntas Frecuentes</a></li>
-                        <li><a href="" class="hover:text-accent-default transition-all">Politica de cookies</a></li>
+                        <li><a href="/home/inicio" class="hover:text-accent-default transition-all">Politica de cookies</a></li>
                     </ul>
                 </div>
             </div>
