--- a/src/app/home/lista-medicos/lista-medicos.component.html
+++ b/src/app/home/lista-medicos/lista-medicos.component.html
@@ -2,7 +2,7 @@
   <div class="container mx-auto mt-14">
     <h2 class="blog__title h2 text-center mb-[50px]">Nuestro Equipo</h2>
     <div *ngIf="dataSource && dataSource.length > 0"
-      class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 xl:border-2 mx-auto w-[80%] md:w-full animacion">
+      class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 xl: mx-auto w-[80%] md:w-full animacion">
       <div *ngFor="let lista_medicos of dataSource"
         class="max-w-[420px] shadow-custom2 rounded-[10px] overflow-hidden cursor-pointer group">
 
