--- a/src/app/home/blog/blog.component.html
+++ b/src/app/home/blog/blog.component.html
@@ -1,16 +1,16 @@
 <section class="blog">
     <div class="container mx-auto mt-14">
         <h2 class="blog__title h2 text-center mb-[50px]">Últimas Noticias</h2>
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 xl:border-2 mx-auto w-[80%] md:w-full animacion">
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 xl: mx-auto w-[80%] md:w-full animacion">
             <div class="max-w-[420px] shadow-custom2 rounded-[10px] overflow-hidden cursor-pointer group">
                 <div class="relative overflow-hidden">
                     <img class="group-hover:scale-110 transition-all duration-500 object-cover w-full h-52" src="assets/blog/pericaditis.svg" alt="">
                    
                 </div>
                 <div class="px-5 pt-3 pb-4">
-                    <div class="mb-4">20 Marzo 2024</div>
+                    <div class="mb-4">29 Mayo 2024</div>
                     <h4 class="h4 mb-[10px]">Tengo pericaditis ¿Que debo hacer?</h4>
-                    <p class="font-light ">Desde el inicio de la pandemia del Covid 19, la existencia de la pericarditis y la miopericarditis se han hecho más conocidas entre la ....
+                    <p class="font-light ">Desde el inicio de la pandemia del Covid 19, la existencia de la pericarditis y la miopericarditis se han hecho más conocidas ...
                         <a href="https://www.quironsalud.com/blogs/es/cardioblog/pericarditis-debo-saber" class="italic underline text-[#4c5354]">Leer mas</a>
                     </p>
                 </div>
@@ -21,9 +21,9 @@
                    
                 </div>
                 <div class="px-5 pt-3 pb-4">
-                    <div class="mb-4">20 Marzo 2024</div>
+                    <div class="mb-4"> 20 Mayo 2024</div>
                     <h4 class="h4 mb-[10px]">¿Que tienes que saber del ayuno intermitente?</h4>
-                    <p class="font-light ">Desde el inicio de la pandemia del Covid 19, la existencia de la pericarditis y la miopericarditis se han hecho más conocidas entre la ....
+                    <p class="font-light ">l ayuno intermitente es, en pocas palabras, hacer ciclos entre períodos en los que se come y períodos en donde se ayuna ...
                         <a href="https://www.dietdoctor.com/es/ayuno-intermitente" class="italic underline text-[#4c5354]">Leer mas</a>
                     </p>
                 </div>
@@ -35,9 +35,9 @@
                    
                 </div>
                 <div class="px-5 pt-3 pb-4">
-                    <div class="mb-4">20 Marzo 2024</div>
+                    <div class="mb-4">17 Mayo 2024</div>
                     <h4 class="h4 mb-[10px] text-[10%]">Virus sincitial en niños: ¿Qué es?</h4>
-                    <p class="font-light ">El Virus Sincitial Respiratorio (VSR) es una infección viral común que afecta principalmente a los niños pequeños y ...
+                    <p class="font-light ">El virus respiratorio sincitial, también conocido como virus respiratorio sincicial, es una enfermedad viral común. Por lo general ...
                         <a href="https://medlineplus.gov/spanish/respiratorysyncytialvirusinfections.html" class="italic underline text-[#4c5354]">Leer mas</a>
                     </p>
                 </div>
@@ -48,9 +48,9 @@
                   
                 </div>
                 <div class="px-5 pt-3 pb-4">
-                    <div class="mb-4">20 Marzo 2024</div>
-                    <h4 class="h4 mb-[10px] text-[10%]">Vacuna de la gripe en niños</h4>
-                    <p class="font-light ">Como sabrás, la gripe es una infección vírica que se transmite rápidamente por vía respiratoria y que causa picos de incidencia en los meses...
+                    <div class="mb-4">15 Mayo 2024</div>
+                    <h4 class="h4 mb-[10px] text-[10%]">¿Como actuar frente a la gripe en niños?</h4>
+                    <p class="font-light ">Como sabrás, la gripe es una infección vírica que se transmite rápidamente por vía respiratoria y que causa picos de ...
                         <a href="https://medlineplus.gov/spanish/ency/article/007445.htm" class="italic underline text-[#4c5354]">Leer mas</a>
                     </p>
                 </div>
@@ -61,9 +61,9 @@
                    
                 </div>
                 <div class="px-5 pt-3 pb-4">
-                    <div class="mb-4">20 Marzo 2024</div>
+                    <div class="mb-4">5 Mayo 2024</div>
                     <h4 class="h4 mb-[10px] text-[10%]">Lesiones de cadera, ¿Los más frecuentes? </h4>
-                    <p class="font-light ">De manera general, las lesiones de cadera siempre se han relacionado con pacientes de tercera edad. Sin embargo, es importante saber que..
+                    <p class="font-light ">De manera general, las lesiones de cadera siempre se han relacionado con pacientes de tercera edad. Sin embargo, es  ...
                         <a href="https://medlineplus.gov/spanish/hipinjuriesanddisorders.html" class="italic underline text-[#4c5354]">Leer mas</a>
                     </p>
                 </div>
@@ -75,9 +75,9 @@
                     
                 </div>
                 <div class="px-5 pt-3 pb-4">
-                    <div class="mb-4">20 Marzo 2024</div>
+                    <div class="mb-4">28 Abril 2024</div>
                     <h4 class="h4 mb-[10px] text-[10%]">¿Qué es la Otitis?, infeccion viral en niños</h4>
-                    <p class="font-light ">La otitis media o infección de oído es una de las enfermedades más comunes en la infancia, después de las infecciones...
+                    <p class="font-light ">La otitis media o infección de oído es una de las enfermedades más comunes en la infancia, después de las infecciones ...
                         <a href="https://cinfasalud.cinfa.com/p/otitis/" class="italic underline text-[#4c5354]">Leer mas</a>
                     </p>
                 </div>
