--- a/src/app/home/inicio/inicio.component.html
+++ b/src/app/home/inicio/inicio.component.html
@@ -4,11 +4,12 @@
             <div class="hero__text xl:w-[80%] sm:w-[70%] text-center xl:text-left animacion">
                 <h1 class="h1 mb-6 sm:text-4xl text-center sm:text-left pt-6">Nos preocupamos por tu salud</h1>
                 <p class="mb-[42px] md:max-w-xl text-center sm:text-left">
-                    Ofrecemos un anbiente cálido y acogedor donde te sientas seguro y cómodo en cada visita. 
-                    Estamos aquí para ayudarte en cada paso de tu viaje hacia una vida más saludable y plena. 
+                    Ofrecemos un ambiente cálido y acogedor donde te sientas seguro y cómodo en cada visita.
+                    Estamos aquí para ayudarte en cada paso de tu viaje hacia una vida más saludable y plena.
                     Tu bienestar es nuestra prioridad.
                 </p>
-                <a href="/home/reservar_cita"><button class="btn btn-lg btn-accent mx-auto xl:mx-0 px-8 sm:mx-0">Pide tu cita ahora</button></a>
+                <a href="/home/reservar_cita"><button class="btn btn-lg btn-accent mx-auto xl:mx-0 px-8 sm:mx-0">Pide tu
+                        cita ahora</button></a>
             </div>
         </div>
         <div class="hero__img hidden sm:flex xl:flex max-w-[814px] animacion">
@@ -39,7 +40,7 @@
         class="bg-services bg-cover bg-no-repeat max-w[1466px] mx-4 xl:mx-auto rounded-[20px] xl:pt-[70px] px-6 xl:px-0 relative h-[368px] flex items-center xl:items-start -z-10 mt-5">
         <div class="container mx-auto">
             <div class="services__top flex items-center flex-col sm:flex-row xl:mb-[60px] animacion">
-                <h2 class="h2 text-white flex-1 mb-4 xl:mb-0 text-center xl:text-left">Nuestros Servicios</h2>
+                <h2 class="h2 text-white flex-1 mb-4 xl:mb-0 text-center xl:text-left">Mejores Servicios</h2>
                 <p class="text-white flex-1 text-center xl:text-left max-w-2xl xl:max-w-none">Tenemos una amplia
                     gama de servicios médicos diseñados para atender tus necesidades de salud de manera integral.
                 </p>
@@ -49,36 +50,37 @@
     <div class="container mx-auto mt-8 sm:-mt-[100px]">
         <div class=" grid sm:grid-cols-4 gap-5 px-8">
             <div
-                class="services__item bg-white p-[30px] rounded-[10px] shadow-custom2 min-h-[288px] w-[100%] flex flex-col items-center text-center animacion">
-
-                <h3 class="h3 mb[10px]">Antención Primaria</h3>
+                class="services__item items-center bg-white p-[30px] rounded-[10px] shadow-custom2 min-h-[288px] w-[100%] flex flex-col text-center animacion sm:justify-start justify-center">
+                <h3 class="h3 mb[10px]">Atención Primaria</h3>
                 <p class="font-light leading-normal text-[90%] w-[100%] mt-2">Incluimos consultas médicas, exámenes
                     de rutina,
                     administración de medicamentos y seguimiento de enfermedades crónicas.</p>
             </div>
-            <div
-                class="services__item bg-white p-[30px] rounded-[10px] shadow-custom2 min-h-[288px] w-[100%] flex flex-col items-center text-center animacion2">
 
-                <h3 class="h3 mb[10px]">Analisis Médicos</h3>
-                <p class="font-light leading-normal text-[90%] w-[100%] mt-2">Incluimos consultas médicas, exámenes
-                    de rutina,
-                    administración de medicamentos y seguimiento de enfermedades crónicas.</p>
+            <div
+            class="services__item items-center bg-white p-[30px] rounded-[10px] shadow-custom2 min-h-[288px] w-[100%] flex flex-col text-center animacion sm:justify-start justify-center">
+
+                <h3 class="h3 mb[10px]">Análisis Médicos</h3>
+                <p class="font-light leading-normal text-[90%] w-[100%] mt-2">Ofrecemos una amplia gama de pruebas
+                    para obtener un diagnóstico integral , utilizando tecnología avanzada para garantizar resultados
+                    rápidos y confiables</p>
+
             </div>
             <div
-                class="services__item bg-white p-[30px] rounded-[10px] shadow-custom2 min-h-[288px] w-[100%] flex flex-col items-center text-center animacion2">
+            class="services__item items-center bg-white p-[30px] rounded-[10px] shadow-custom2 min-h-[288px] w-[100%] flex flex-col text-center animacion sm:justify-start justify-center">
 
                 <h3 class="h3 mb[10px]">Medicina General</h3>
-                <p class="font-light leading-normal text-[90%] w-[100%] mt-2">Incluimos consultas médicas, exámenes
-                    de rutina,
-                    administración de medicamentos y seguimiento de enfermedades crónicas.</p>
+                <p class="font-light leading-normal text-[90%] w-[100%] mt-2">Ofrecemos atención médica integral para
+                    pacientes , abordando una variedad de problemas de salud desde enfermedades comunes hasta el manejo
+                    de condiciones crónicas.</p>
             </div>
             <div
-                class="services__item bg-white p-[30px] rounded-[10px] shadow-custom2 min-h-[288px] w-[100%] flex flex-col items-center text-center animacion2">
+            class="services__item items-center bg-white p-[30px] rounded-[10px] shadow-custom2 min-h-[288px] w-[100%] flex flex-col text-center animacion sm:justify-start justify-center">
 
                 <h3 class="h3 mb[10px]">Asistencia Sanitaria</h3>
-                <p class="font-light leading-normal text-[90%] w-[100%] mt-2">Incluimos consultas médicas, exámenes
-                    de rutina,
-                    administración de medicamentos y seguimiento de enfermedades crónicas.</p>
+                <p class="font-light leading-normal text-[90%] w-[100%] mt-2">Brindamos servicios de atención médica
+                    continua y de emergencia, incluyendo la atención de lesiones, enfermedades agudas y manejo de
+                    condiciones crónicas.</p>
             </div>
 
 
@@ -92,4 +94,3 @@
 <script src="../../../assets/js/scrollreveal.min.js"></script>
 
 <script src="../../../assets/js/main.js"></script>
-
